--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,9 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+      <a class="sidebar-nav-item-image" href="http://www.swarthmore.edu/libraries">
+      <img src="img/final_final.svg" alt="logo">
+      </a>
 
       <!--a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
