--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,6 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
-
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
@@ -26,7 +25,7 @@
         {% endif %}
       {% endfor %}
       <a class="sidebar-nav-item-image" href="http://www.swarthmore.edu/libraries">
-      <img src="img/final_final.svg" alt="logo">
+      <img src="/img/final_final.svg" alt="logo">
       </a>
 
       <!--a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
