--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,3 +17,11 @@ a.sidebar-nav-item-image img:hover {
 .sidebar .lead a {
 	color: #B82601;
 }
+
+footer {
+  background-color: #B82601;
+  // font-size: $footer-font-size;
+  padding-bottom: 1em;
+  text-align: center;
+  // min-height: 100vh;
+}
