--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,5 +27,5 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
-  <link rel="icon" type="img/png" sizes="16x16" href="img/favicon.png">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
