--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead"><a href="http://www.swarthmore.edu/libraries">{{ site.description }}</p>
+      <!--p class="lead"><a href="http://www.swarthmore.edu/libraries">{{ site.description }}</p-->
     </div>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
