adds apply page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,18 @@
           {% endif %}
         {% endif %}
       {% endfor %}
+
+      <!--Code below for changing side bar navegation order-->
+
+      <!--div class="navbar" id="page-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="/">EverCoding.net</a>
+          <ul class="nav">
+            <li><a href="/pages.html">Pages</a></li>        
+        <li><a href="/archive.html">Archive</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/messages.html">Messages</a></li-->
       <!--<a class="sidebar-nav-item-image" href="http://www.swarthmore.edu/libraries">
       <img src="/img/final_final.svg" alt="logo">
       </a>-->
