adds timeline functionality to prose.io

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,11 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
-  <h3>by 
+  <h3>by
     {{page.authors}}</h3>
+    {% if page.timeline_id %}
+			{% include page-timeline.html %}
+			{% endif %}
   {{ content }}
 </div>
 
